测试annotationProcessor2